# swagger/swagger.json
@@ -15,6 +15,153 @@
     },
     "basePath": "/v1",
     "paths": {
+        "/validacion/": {
+            "get": {
+                "tags": [
+                    "validacion"
+                ],
+                "description": "get Validacion",
+                "operationId": "ValidacionController.GetAll",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "query",
+                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "fields",
+                        "description": "Fields returned. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "sortby",
+                        "description": "Sorted-by fields. e.g. col1,col2 ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "order",
+                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "limit",
+                        "description": "Limit the size of result set. Must be an integer",
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "offset",
+                        "description": "Start position of result set. Must be an integer",
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Validacion"
+                        }
+                    },
+                    "403": {
+                        "description": ""
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "validacion"
+                ],
+                "description": "create Validacion",
+                "operationId": "ValidacionController.Create",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "docID",
+                        "description": "ID del documento",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{}"
+                    },
+                    "403": {
+                        "description": "body is empty"
+                    }
+                }
+            }
+        },
+        "/validacion/{id}": {
+            "get": {
+                "tags": [
+                    "validacion"
+                ],
+                "description": "get Validacion by id",
+                "operationId": "ValidacionController.GetOne",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The key for staticblock",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Validacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is empty"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "validacion"
+                ],
+                "description": "update the Validacion",
+                "operationId": "ValidacionController.Put",
+                "parameters": [
+                    {
+                        "in": "path",
+                        "name": "id",
+                        "description": "The id you want to update",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "body",
+                        "name": "body",
+                        "description": "body for Validacion content",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.Validacion"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/models.Validacion"
+                        }
+                    },
+                    "403": {
+                        "description": ":id is not int"
+                    }
+                }
+            }
+        },
         "/workflow/": {
             "get": {
                 "tags": [
@@ -137,6 +284,10 @@
         }
     },
     "definitions": {
+        "models.Validacion": {
+            "title": "Validacion",
+            "type": "object"
+        },
         "models.Workflow": {
             "title": "Workflow",
             "type": "object"
@@ -146,6 +297,10 @@
         {
             "name": "workflow",
             "description": "WorkflowController operations for Workflow\n"
+        },
+        {
+            "name": "validacion",
+            "description": "ValidacionController operations for Validacion\n"
         }
     ]
 }
